--- a/privacy.htm
+++ b/privacy.htm
@@ -1,6 +1,8 @@
+<h3>Privacy Policy of E-LEARNING EDUs</h3>
+
 This page is to help you understand our Privacy Policy.
 
-Policy summary
+<b>Policy summary</b>
 
 We guarantee that the app does not collect any personal information from users/devices of users. 
 
