--- a/privacy.htm
+++ b/privacy.htm
@@ -1,4 +1,4 @@
-<h3>Privacy Policy of E-LEARNING EDUs</h3>
+<p><h3>Privacy Policy of E-LEARNING EDUs</h3>
 
 This page is to help you understand our Privacy Policy.
 
@@ -20,3 +20,4 @@ For further information, please contact the author of application at: gplay.elea
 
 Best Regards. 
 Thanks.
+</p>
