--- a/privacy.htm
+++ b/privacy.htm
@@ -1,5 +1,5 @@
 <div>
-<p><h3>Privacy Policy of E-LEARNING EDUs</h3></p>
+<p><h3>Privacy Policy</h3></p>
 
 <p>This page is to help you understand our Privacy Policy.</p>
 
@@ -20,8 +20,7 @@
 <p>My applications contains ads from Google Admob and Facebook Audience Network that may use some information of your devices (not including your name, address, email address, telephone number, etc) to provide appropriate advertisements.	</p>
 
 <p>Last updated: September 22nd, 2017. </p>
-<p>For further information, please contact the author of application at: <b>gplay.elearning@gmail.com.</b></p>
+<p>For further information, please contact the author of application</p>
 
-<p><b>Best Regards.<b></p>
-<p><b>Thanks.</b></p>
+<p><b>Thanks& Best Regards.<b></p>
 </div>
