--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,24 @@
-#index
+<div>
+<p><h3>Privacy Policy</h3></p>
+
+<p>This page is to help you understand our Privacy Policy.</p>
+
+<p><b>Policy summary</b></p>
+
+<p>We guarantee that the app does not collect any personal information from users/devices of users. </p>
+
+<p>My applications is a free for English learners all over the world from kids to adults. </p>
+
+<p>My applications: 
+	<ul>
+		<li><b>Does not require users to sign in or sign up or create any personal accounts to use the app.</b></li>
+		<li><b>Does not include any features or functions communicating with other users/devices/servers.</b></li>
+		<li><b>Does not require users to input any personal information (name, age, address, phone number, ...).</b></li>
+	</ul>
+</p>
+
+<p>My applications contains ads from Google Admob and Facebook Audience Network that may use some information of your devices (not including your name, address, email address, telephone number, etc) to provide appropriate advertisements.	</p>
+
+<p>Last updated: September 22nd, 2017. </p>
+<p><b>Thanks& Best Regards.<b></p>
+</div>
